--- a/listings/templates/listings/contact.html
+++ b/listings/templates/listings/contact.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-</head>
-<body>
-    <h1>Contact</h1>
-    <h2>Formulaire de content</h2>
-    <input type="text" name="name" id="name">
-    <input type="email" name="email" id="email">
-    <textarea name="" id=""></textarea>
-</body>
-</html>
+{% extends "listings/base.html" %}
+
+{% block content %}
+	<h1>Contact</h1>
+	<h2>Formulaire de content</h2>
+	<form action="" method="post">
+		<input type="text" name="name" id="name">
+		<input type="email" name="email" id="email">
+		<textarea name="" id=""></textarea>
+	</form>
+{% endblock %}
