--- a/listings/templates/listings/about.html
+++ b/listings/templates/listings/about.html
@@ -1,5 +1,7 @@
 {% extends "listings/base.html" %}
 
 {% block content %}
-    <h1>À propos</h1>
+    <div class="title-div">
+        <h1>À propos</h1>
+    </div>
 {% endblock %}
