--- a/listings/templates/listings/contact.html
+++ b/listings/templates/listings/contact.html
@@ -1,11 +1,23 @@
 {% extends "listings/base.html" %}
 
 {% block content %}
-	<h1>Contact</h1>
-	<h2>Formulaire de content</h2>
-	<form action="" method="post">
-		<input type="text" name="name" id="name">
-		<input type="email" name="email" id="email">
-		<textarea name="" id=""></textarea>
-	</form>
+	<div class="title-div">
+		<h1>Contact</h1>
+	</div>
+	<div class="content-div">
+		<div class="title-div">
+			<h2>Formulaire de contact</h2>
+		</div>
+		<div class="form-part">
+			<form action="" method="post">
+                <label for="name">Nom : </label>
+				<input type="text" name="name" id="name">
+                <label for="email">Email : </label>
+				<input type="email" name="email" id="email">
+                <label for="message">Message : </label>
+				<textarea name="message" id="message"></textarea>
+                <input type="submit" value="Envoyer">
+			</form>
+		</div>
+	</div>
 {% endblock %}
