Update listing views

--- a/listings/templates/listings/brand/brand_detail.html
+++ b/listings/templates/listings/brand/brand_detail.html
@@ -33,6 +33,21 @@
 				{% endif %}
 			</li>
 		</ul>
+
+		{% if brand.listing_set %}
+			<div>
+				<h4>Articles associés :
+				</h4>
+				<ul>
+					{% for listing in brand.listing_set.all %}
+						<li>{{ listing.name }}</li>
+					{% endfor %}
+				</ul>
+			</div>
+		{% else %}
+			Aucun articles associés
+		{% endif %}
+
 	</div>
 
 {% endblock %}
