--- a/listings/templates/listings/contact.html
+++ b/listings/templates/listings/contact.html
@@ -9,13 +9,9 @@
 			<h2>Formulaire de contact</h2>
 		</div>
 		<div class="form-part">
-			<form action="" method="post">
-                <label for="name">Nom : </label>
-				<input type="text" name="name" id="name">
-                <label for="email">Email : </label>
-				<input type="email" name="email" id="email">
-                <label for="message">Message : </label>
-				<textarea name="message" id="message"></textarea>
+			<form action="" method="post" novalidate>
+			{% csrf_token %}
+                {{ form.as_p }}
                 <input type="submit" value="Envoyer">
 			</form>
 		</div>
