--- a/listings/templates/listings/base.html
+++ b/listings/templates/listings/base.html
@@ -12,6 +12,7 @@
 		<nav>
 			<div>
 				<a href="{% url 'brand-list' %}">Accueil</a>
+				<a href="{% url 'about' %}">À propos</a>
 				<a href="{% url 'contact' %}">Contact</a>
 			</div>
 		</nav>
