--- a/listings/templates/listings/base.html
+++ b/listings/templates/listings/base.html
@@ -13,6 +13,7 @@
 			<div>
 				<a href="{% url 'brand-list' %}">Accueil</a>
 				<a href="{% url 'brand-add' %}">Ajouter marque</a>
+				<a href="{% url 'listing-add' %}">Ajouter listing</a>
 				<a href="{% url 'about' %}">À propos</a>
 				<a href="{% url 'contact' %}">Contact</a>
 			</div>
