Update home page

--- a/listings/templates/listings/brand/brand_list.html
+++ b/listings/templates/listings/brand/brand_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<div class="title-div">
-		<h1>Hello Django</h1>
+		<h1>Les marques</h1>
 	</div>
 	<div class="content-div">
 		<div>
