--- a/listings/templates/listings/base.html
+++ b/listings/templates/listings/base.html
@@ -11,7 +11,7 @@
 	<body>
 		<nav>
 			<div>
-				<a href="{% url 'brand-list' %}">Accueil</a>
+				<a href="{% url 'home' %}">Accueil</a>
 				<a href="{% url 'brand-add' %}">Ajouter marque</a>
 				<a href="{% url 'listing-add' %}">Ajouter listing</a>
 				<a href="{% url 'about' %}">À propos</a>
