--- a/listings/templates/listings/brand/brand_detail.html
+++ b/listings/templates/listings/brand/brand_detail.html
@@ -51,6 +51,7 @@
 
 	<div>
 	    <a href="{% url 'brand-edit' brand.id %}">Modifier la marque</a>
+		<a href="{% url 'brand-delete' brand.id %}">Supprimer la marque</a>
 	</div>
 
 {% endblock %}
