--- a/listings/templates/listings/listing/listing_detail.html
+++ b/listings/templates/listings/listing/listing_detail.html
@@ -25,6 +25,7 @@
 
 	<div>
 	    <a href="{% url 'listing-edit' listing.id %}">Modifier l'article</a>
+		<a href="{% url 'listing-delete' listing.id %}">Supprimer l'article</a>
 	</div>
 
 {% endblock %}
