--- a/listings/templates/listings/listing/listing_list.html
+++ b/listings/templates/listings/listing/listing_list.html
@@ -4,6 +4,17 @@
 <div class="title-div">
 		<h1>Les articles</h1>
 	</div>
+
+	<div>
+		{% if messages %}
+			<ul class="messages">
+				{% for message in messages %}
+					<li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+				{% endfor %}
+			</ul>
+		{% endif %}
+	</div>
+	
 	<div class="content-div">
 		<div>
 			<p>Tous les articles :</p>
