--- a/listings/static/listings/styles.css
+++ b/listings/static/listings/styles.css
@@ -1,3 +1,33 @@
+ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+  
+ul.topnav li {float: left;}
+  
+ul.topnav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+  
+ul.topnav li a:hover:not(.active) {
+    background-color: #111;
+}
+  
+ul.topnav li a.active {
+    background-color: #5d9d1d;
+}
+  
+ul.topnav li.right {
+    float: right;
+}
+
 .title-div {
     text-align: center;
 }
@@ -15,4 +45,15 @@
 
 .errorlist { 
     margin-bottom: -10px 
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+@media screen and (max-width: 600px) {
+    ul.topnav li.right, 
+    ul.topnav li {float: none;}
 }
