--- a/listings/static/listings/styles.css
+++ b/listings/static/listings/styles.css
@@ -7,7 +7,12 @@ ul.topnav {
 }
   
 ul.topnav li {float: left;}
-  
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
 ul.topnav li a {
     display: block;
     color: white;
@@ -30,6 +35,7 @@ ul.topnav li.right {
 
 .title-div {
     text-align: center;
+    margin: 40px 0;
 }
 
 .content-div {
@@ -51,6 +57,33 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+}
+
+.box {
+    border: 3px solid black;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    width: 50%;
+    margin: 15px auto;
+    padding: 50px 30px;
+}
+
+.link-button {
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    display: inline-block;
+}
+
+.link-button-edit {
+    background-color: #10b03e;
+}
+
+.link-button-delete {
+    background-color: #f44336;
+}
+
+.button-div, .association-div {
+    margin: 30px 0;
 }
 
 @media screen and (max-width: 600px) {
