--- a/listings/templates/listings/listing/listing_list.html
+++ b/listings/templates/listings/listing/listing_list.html
@@ -19,14 +19,10 @@
 		<div>
 			<p>Tous les articles :</p>
 		</div>
-		<div>
-			<ul>
-				{% for listing in listings %}
-					<li>
-						<a href="{% url 'listing-detail' listing.id %}">{{ listing.name }}</a>
-					</li>
-				{% endfor %}
-			</ul>
-		</div>
+		{% for listing in listings %}
+		    <div class="box">
+			    <a href="{% url 'listing-detail' listing.id %}">{{ listing.name }}</a>
+			</div>
+		{% endfor %}
 	</div>
 {% endblock %}
